...
    return ListView(
      padding: const EdgeInsets.all(12),
      children: <Widget>[
        Text("Channel", style: Theme.of(context).textTheme.titleLarge),
        SteppedSelector('Channel', _channel + 1, 1, 16, _onChannelChanged),
        const Divider(),
        Text("CC", style: Theme.of(context).textTheme.titleLarge),
        SteppedSelector(
            'Controller', _controller, 0, 127, _onControllerChanged),
        SlidingSelector('Value', _ccValue, 0, 127, _onValueChanged),
        const Divider(),
        Text("NRPN", style: Theme.of(context).textTheme.titleLarge),
        SteppedSelector('Parameter', _nrpnCtrl, 0, 16383, _onNRPNCtrlChanged),
        SlidingSelector('Parameter', _nrpnCtrl, 0, 16383, _onNRPNCtrlChanged),
        SlidingSelector('Value', _nrpnValue, 0, 16383, _onNRPNValueChanged),
        const Divider(),
        Text("PC", style: Theme.of(context).textTheme.titleLarge),
        SteppedSelector('Program', _pcValue, 0, 127, _onProgramChanged),
        const Divider(),
        Text("Pitch Bend", style: Theme.of(context).textTheme.titleLarge),
        Slider(
            value: _pitchValue,
            max: 1,
            min: -1,
            onChanged: _onPitchChanged,
            onChangeEnd: (_) {
...
